# pbvs-4dof-robotarm

./: .gitignore  readme.md  robot_description_output.xml  temp_aruco_world.sdf
arm_description/: CMakeLists.txt  package.xml
arm_description/launch/: display.launch.py  display.launch.xml  display.launch.xml.bak  upload_robot.launch.py
arm_description/rviz/: urdf_config.rviz
arm_description/urdf/: arm.urdf.xacro  arm_control.xacro  arm_core.xacro  arm_gazebo.xacro  camera.xacro
arm_gazebo/: CMakeLists.txt  package.xml
arm_gazebo/launch/: spawn_arm.launch.py
arm_gazebo/models/aruco_marker_0/: model.sdf
arm_gazebo/models/aruco_marker_0/materials/scripts/: aruco_marker.material
arm_gazebo/params/: arm_bridge.yaml  arm_controllers.yaml
arm_gazebo/worlds/: arm_world.sdf
arm_vision/: CMakeLists.txt  package.xml
arm_vision/scr/: aruco_detector_node.py
gz_arm_test/: readme.md  robotarm_keyboard.sdf
src/gz_arm_test/: robotarm_keyboard.sdf  robotarm_minimal.sdf  test_arm.sdf
src/robotarm/: package.xml  setup.py
src/robotarm/config/: robot_controllers.yaml
src/robotarm/launch/: view_robot_gazebo.launch.py
src/robotarm/models/robotarm/: model.config  model.sdf
src/robotarm/urdf/: robotarm.urdf.xacro
src/robotarm/worlds/: robotarm_world.sdf
